--- a/config.yaml
+++ b/config.yaml
@@ -26,5 +26,5 @@ logging:
   level: DEBUG # More granular logging level
   format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
   file: logs/pipeline.log # Add log file output
-  max_size: 10485760 # 10MB max file size
+  max_size: 10485760 # Maximum log file size in bytes before rotation occurs
   backup_count: 5 # Keep 5 backup logs
