--- a/config.yaml
+++ b/config.yaml
@@ -17,14 +17,14 @@ mask:
 
 # Inpainting Configurations:
 inpainting:
-  model_name: "stabilityai/stable-diffusion-2-inpainting" # Stable diffusion model for inpainting.
+  model_name: stabilityai/stable-diffusion-2-inpainting # Stable diffusion model for inpainting.
   torch_dtype: float16 # Data type for torch
-  device: "cuda"
+  device: cuda
 
 # Logging Configurations:
 logging:
   level: DEBUG # More granular logging level
-  format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+  format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
   file: logs/pipeline.log # Add log file output
   max_size: 10485760 # Maximum log file size in bytes before rotation occurs
   backup_count: 5 # Keep 5 backup logs
