--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,13 @@
 dataset:
   dataset_dir: dataset # Directory to store the dataset
-  coco_url: http://images.cocodataset.org/zips/val2017.zip # URLs can be changed val/test/train
+  coco_url: http://images.cocodataset.org/zips/test2017.zip # URLs can be changed val/test/train
   num_images_to_process: 10 # Number of images to process
   start_index: 0 # Start index of the images to process
   stop_index: 10 # Stop index of the images to process
 
 # Path Configurations:
 paths:
-  coco_dir: dataset/val2017 # Directory for extracted COCO images
+  coco_dir: dataset/test2017 # Directory for extracted COCO images
   mask_dir: dataset/masks # Directory to store generated masks
   inpainted_dir: dataset/inpainted # Directory to store inpainted images
 
